@@ -8,7 +8,7 @@ copyright_year   = 2010
 
 [Prereqs]
 MooseX::POE = 0.208
-POE::Component::Client::Feed = 0.900
+POE::Component::Client::Feed = 0.901
 IO::All = 0
 
 [Prereqs / TestRequires]
